<?xml version="1.0"?>
<package format="2">
<name>graph_ros1_tests</name>
<version>0.0.0</version>
<description>The graph_ros1_tests package</description>


<maintainer email="c.tonola001@unibs.it">cesare</maintainer>


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>graph_ros1</build_depend>
<build_export_depend>graph_ros1</build_export_depend>
<exec_depend>graph_ros1</exec_depend>

<build_depend>graph_core</build_depend>
<build_export_depend>graph_core</build_export_depend>
<exec_depend>graph_core</exec_depend>

<build_depend>yaml-cpp</build_depend>
<build_export_depend>yaml-cpp</build_export_depend>
<exec_depend>yaml-cpp</exec_depend>

</package>
