<?xml version="1.0"?>
<package format="2">
<name>graph_ros_tests</name>
<version>0.0.0</version>
<description>The graph_ros_tests package</description>


<maintainer email="c.tonola001@unibs.it">cesare</maintainer>


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>moveit_collision_checker</build_depend>
<build_export_depend>moveit_collision_checker</build_export_depend>
<exec_depend>moveit_collision_checker</exec_depend>

<build_depend>graph_display</build_depend>
<build_export_depend>graph_display</build_export_depend>
<exec_depend>graph_display</exec_depend>

<build_depend>graph_core</build_depend>
<build_export_depend>graph_core</build_export_depend>
<exec_depend>graph_core</exec_depend>

<depend>object_loader</depend>

</package>
